Fixing async add usuario

--- a/front/src/app/components/cadastro-usuario/cadastro-usuario.component.html
+++ b/front/src/app/components/cadastro-usuario/cadastro-usuario.component.html
@@ -1,7 +1,7 @@
 <div class="ml-5">
     <div class="row">
         <div class="col m-3">
-            <mat-label>Quero comprar!</mat-label>
+            <mat-label>Novo usuário</mat-label>
         </div>
     </div>
     <div class="row">
