Removing identity and jwt

--- a/front/src/app/components/login/login.component.html
+++ b/front/src/app/components/login/login.component.html
@@ -4,7 +4,7 @@
         <form #form="ngForm" (ngSubmit)="form.valid && onSubmit()">
             <p>
                 <mat-form-field>
-                    <input type="text" matInput placeholder="Login" name="login" [(ngModel)]="login.email" required>
+                    <input type="text" matInput placeholder="Login" name="login" [(ngModel)]="login.login" required>
                 </mat-form-field>
             </p>
             <p>
