--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -87,11 +87,12 @@ a.this-page {
 
 .menu-links {
     text-transform: uppercase;
-    margin-top: 50px;
+    margin-top: 16%;
+    width: 70%;
 }
 
 .menu-link-item {
-    margin-bottom: 20px;
+    margin-bottom: 10%;
 }
 
 .inner-sidebar {
@@ -110,14 +111,14 @@ a.this-page {
 }
 
 .inner-sidebar-date {
-    margin-top: 40px;
+    margin-top: 15%;
     color: #2D2D2D;
     font-size: 1.2rem;
 }
 
 .inner-sidebar-card {
-    margin-top: 30px;
-    padding: 20px 40px;
+    margin-top: 10%;
+    padding: 8% 12%;
     border: 1px solid #D3D3D3;
     border-radius: 5px;
 }
@@ -126,7 +127,7 @@ a.this-page {
     color: #2D2D2D;
     font-size: 1.2rem;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: 5%;
 }
 
 .inner-sidebar-card-task {
