--- a/front/src/app/components/ponto/ponto.component.html
+++ b/front/src/app/components/ponto/ponto.component.html
@@ -1,4 +1,4 @@
-<div class="ml-5">
+<!-- <div class="ml-5">
     <div class="row">
         <div class="col m-3">
             <mat-label>{{acao}} ponto</mat-label>
@@ -25,6 +25,17 @@
                     </div>
                 </div>
             </form>
+        </div>
+    </div>
+</div> -->
+<app-pontos class=""></app-pontos>
+<div class="main-content">
+    <div class="main-content-elements">
+        <div class="main-date">{{ agora | date: 'longDate'}}</div>
+        <div class="main-time">{{ agora | date: 'HH:mm:ss'}}</div>
+        <a class="start btn" (click)="onSubmit()">Iniciar Trabalho</a>
+        <div class="main-task">
+            <input type="text" [(ngModel)]="ponto.tarefa" placeholder="Inserir tarefa associada..." />
         </div>
     </div>
 </div>
