--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -75,11 +75,10 @@ a.this-page {
 }
 
 .menu {
-    position: absolute;
-    top: 10%;
+    position: fixed;
     left: 0;
     width: 18%;
-    min-height: 90%;
+    min-height: 100%;
     border-right: 1px solid #D3D3D3;
     display: flex;
     justify-content: center;
@@ -97,13 +96,14 @@ a.this-page {
 
 .inner-sidebar {
     position: absolute;
-    top: 10%;
     left: 18%;
     width: 22%;
-    min-height: 90%;
+    min-height: 100%;
     border-right: 1px solid #D3D3D3;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: center;
 }
 
 .inner-sidebar-content {
@@ -137,10 +137,9 @@ a.this-page {
 
 .main-content {
     position: absolute;
-    top: 10%;
     right: 0;
     width: 60%;
-    min-height: 90%;
+    min-height: 100%;
     background-color: #F7F7F7;
     display: flex;
     justify-content: center;
