--- a/front/src/app/components/banco/banco.component.html
+++ b/front/src/app/components/banco/banco.component.html
@@ -18,17 +18,17 @@
         </div>
         <div class="menu-link-item">
             <a routerLink="/requerimentos">
-                <span>Meus requerimentos</span>
+                <span>Meus Requerimentos</span>
             </a>
         </div>
         <div class="menu-link-item">
             <a routerLink="/requerimento">
-                <span>Novo requerimento</span>
+                <span>Novo Requerimento</span>
             </a>
         </div>
         <div *ngIf="login.perfil == 1" class="menu-link-item">
             <a routerLink="/usuarios">
-                <span>Usuários</span>
+                <span>Ver Usuários</span>
             </a>
         </div>
         <div class="menu-link-item">
@@ -42,7 +42,7 @@
             </a>
         </div>
     </div>
-</div>|
+</div>
 <div class="main-content-full">
     <div *ngIf="relatorio">
         <p>Saldo Total: {{ relatorio.saldoString }}</p>
