--- a/front/src/app/components/ponto/ponto.component.scss
+++ b/front/src/app/components/ponto/ponto.component.scss
@@ -1,3 +1,35 @@
 mat-form-field{
     display: block;
 }
+
+.inner-sidebar-card {
+    margin-top: 10%;
+    padding: 8% 12%;
+    border: 1px solid #D3D3D3;
+    border-radius: 5px;
+}
+
+.inner-sidebar-date {
+    margin-top: 15%;
+    color: #2D2D2D;
+    font-size: 1rem;
+    text-transform: uppercase;
+}
+
+.inner-sidebar-card-time {
+    color: #2D2D2D;
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin-bottom: 5%;
+}
+
+.inner-sidebar-card-task {
+    color: #443a3a;
+    font-size: 1.1rem;
+}
+
+.inner-sidebar-message {
+    margin-top: 8%;
+    font-style: italic;
+    color: #a3a3a3;
+}
