--- a/front/src/app/components/requerimentos/requerimentos.component.html
+++ b/front/src/app/components/requerimentos/requerimentos.component.html
@@ -18,17 +18,17 @@
         </div>
         <div class="menu-link-item">
             <a class="this-page" routerLink="/requerimentos">
-                <span>Meus requerimentos</span>
+                <span>Meus Requerimentos</span>
             </a>
         </div>
         <div class="menu-link-item">
             <a routerLink="/requerimento">
-                <span>Novo requerimento</span>
+                <span>Novo Requerimento</span>
             </a>
         </div>
         <div *ngIf="login.perfil == 1" class="menu-link-item">
             <a routerLink="/usuarios">
-                <span>Usuários</span>
+                <span>Ver Usuários</span>
             </a>
         </div>
         <div class="menu-link-item">
