--- a/front/src/app/components/usuarios/usuarios.component.html
+++ b/front/src/app/components/usuarios/usuarios.component.html
@@ -12,13 +12,23 @@
             </a>
         </div>
         <div class="menu-link-item">
-            <a class="this-page" routerLink="/banco">
+            <a routerLink="/banco">
                 <span>Banco de Horas</span>
             </a>
         </div>
         <div class="menu-link-item">
-            <a routerLink="/usuarios">
-                <span>Usuários</span>
+            <a routerLink="/requerimentos">
+                <span>Meus Requerimentos</span>
+            </a>
+        </div>
+        <div class="menu-link-item">
+            <a routerLink="/requerimento">
+                <span>Novo Requerimento</span>
+            </a>
+        </div>
+        <div *ngIf="login.perfil == 1" class="menu-link-item">
+            <a class="this-page" routerLink="/usuarios">
+                <span>Ver Usuários</span>
             </a>
         </div>
         <div class="menu-link-item">
@@ -32,55 +42,51 @@
             </a>
         </div>
     </div>
-</div>|
-
-<div class="row">
-    <div class="col">
-        <a class="float-right" [routerLink]="['/usuarios', 0]" mat-raised-button color='primary'>Novo
-            Usuário</a>
-    </div>
 </div>
-
-<div class=" table-container mat-elevation-z8">
-    <div class="loading-shade" *ngIf="isLoadingResults || isError">
-        <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
-        <div class="error" *ngIf="isError">
-            Request error!
+<div class="main-content-full">
+    <mat-card>
+        <div class="row">
+            <div class="col">
+                <a class="float-right b-new" [routerLink]="['/cadastro-usuario']" mat-button>Novo
+                    Usuário</a>
+            </div>
         </div>
-    </div>
-
-    <div class="table-intern-container">
-        <table mat-table [dataSource]="data">
-
-            <ng-container matColumnDef="nome">
-                <th mat-header-cell *matHeaderCellDef> Nome </th>
-                <td mat-cell *matCellDef="let data">{{ data.nome }}</td>
-            </ng-container>
-
-            <ng-container matColumnDef="telefone">
-                <th mat-header-cell *matHeaderCellDef> Telefone </th>
-                <td mat-cell *matCellDef="let data">{{ data.telefone }}</td>
-            </ng-container>
-
-            <ng-container matColumnDef="email">
-                <th mat-header-cell *matHeaderCellDef> E-mail </th>
-                <td mat-cell *matCellDef="let data">{{ data.email }}</td>
-            </ng-container>
-
-            <ng-container matColumnDef="acoes">
-                <th mat-header-cell *matHeaderCellDef> Ações </th>
-                <td mat-cell *matCellDef="let data">
-                    <a mat-icon-button [routerLink]="['/usuarios', data.id]">
-                        <mat-icon>edit</mat-icon>
-                    </a>
-                    <button mat-icon-button (click)="delete(data.id)">
-                        <mat-icon>delete</mat-icon>
-                    </button>
-                </td>
-            </ng-container>
-
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-    </div>
+        <div class=" table-container">
+            <div class="loading-shade" *ngIf="isLoadingResults || isError">
+                <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
+                <div class="error" *ngIf="isError">
+                    Request error!
+                </div>
+            </div>
+            <div class="table-intern-container">
+                <table mat-table [dataSource]="data">
+                    <ng-container matColumnDef="nome">
+                        <th mat-header-cell *matHeaderCellDef> Nome </th>
+                        <td mat-cell *matCellDef="let data">{{ data.nome }}</td>
+                    </ng-container>
+                    <ng-container matColumnDef="telefone">
+                        <th mat-header-cell *matHeaderCellDef> Telefone </th>
+                        <td mat-cell *matCellDef="let data">{{ data.telefone }}</td>
+                    </ng-container>
+                    <ng-container matColumnDef="email">
+                        <th mat-header-cell *matHeaderCellDef> E-mail </th>
+                        <td mat-cell *matCellDef="let data">{{ data.email }}</td>
+                    </ng-container>
+                    <ng-container matColumnDef="acoes">
+                        <th mat-header-cell *matHeaderCellDef> Ações </th>
+                        <td mat-cell *matCellDef="let data">
+                            <a mat-icon-button [routerLink]="['/usuarios', data.id]">
+                                <mat-icon>edit</mat-icon>
+                            </a>
+                            <button mat-icon-button (click)="delete(data.id)">
+                                <mat-icon>delete</mat-icon>
+                            </button>
+                        </td>
+                    </ng-container>
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                </table>
+            </div>
+        </div>
+    </mat-card>
 </div>
