--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -65,15 +65,6 @@ a.this-page {
     font-weight: bold;
 }
 
-.topbar {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 10%;
-    border-bottom: 1px solid #D3D3D3;
-}
-
 .menu {
     position: fixed;
     left: 0;
@@ -106,6 +97,7 @@ a.this-page {
 
 .menu-link-item {
     margin-bottom: 10%;
+    text-align: center;
 }
 
 .inner-sidebar {
@@ -124,33 +116,8 @@ a.this-page {
     width: 80%;
 }
 
-.inner-sidebar-date {
-    margin-top: 15%;
-    color: #2D2D2D;
-    font-size: 1.2rem;
-}
-
-.inner-sidebar-card {
-    margin-top: 10%;
-    padding: 8% 12%;
-    border: 1px solid #D3D3D3;
-    border-radius: 5px;
-}
-
-.inner-sidebar-card-time {
-    color: #2D2D2D;
-    font-size: 1.2rem;
-    font-weight: bold;
-    margin-bottom: 5%;
-}
-
-.inner-sidebar-card-task {
-    color: #443a3a;
-    font-size: 1.1rem;
-}
-
 .main-content {
-    position: absolute;
+    position: fixed;
     right: 0;
     width: 60%;
     min-height: 100%;
