Adding front-end "requerimento"

--- a/front/src/app/components/cadastro-usuario/cadastro-usuario.component.html
+++ b/front/src/app/components/cadastro-usuario/cadastro-usuario.component.html
@@ -46,7 +46,7 @@
 <div class="main-content-full">
     <mat-card>
         <div class="ml-5">
-            <div class="row">
+            <div class="row mt-5 mb-4">
                 <div class="col">
                     <mat-card-title>Cadastrar novo usuário</mat-card-title>
                 </div>
@@ -87,7 +87,7 @@
                                 </mat-form-field>
                             </div>
                         </div>
-                        <div class="row mt-2">
+                        <div class="row mt-4">
                             <div class="col-3">
                                 <button type="submit" class="b-register" mat-button>Cadastrar</button>
                             </div>
