--- a/front/src/app/components/usuario/usuario.component.html
+++ b/front/src/app/components/usuario/usuario.component.html
@@ -46,7 +46,7 @@
 <div class="main-content-full">
     <mat-card>
         <div class="ml-5">
-            <div class="row">
+            <div class="row mt-5 mb-5">
                 <div class="col">
                     <mat-card-title>Editar dados pessoais</mat-card-title>
                 </div>
@@ -95,7 +95,7 @@
                                 </mat-form-field>
                             </div>
                         </div>
-                        <div class="row mt-2">
+                        <div class="row mt-4">
                             <div class="col-3">
                                 <button type="submit" class="b-save" mat-button>Salvar</button>
                             </div>
