--- a/front/src/app/components/usuarios/usuarios.component.html
+++ b/front/src/app/components/usuarios/usuarios.component.html
@@ -45,7 +45,7 @@
 </div>
 <div class="main-content-full">
     <mat-card>
-        <div class="row">
+        <div class="row mb-2">
             <div class="col">
                 <a class="float-right b-new" [routerLink]="['/cadastro-usuario']" mat-button>Novo
                     Usuário</a>
