--- a/front/src/app/components/usuarios/usuarios.component.scss
+++ b/front/src/app/components/usuarios/usuarios.component.scss
@@ -16,8 +16,9 @@
 }
 
 mat-card {
-    min-height: 90vh;
-    min-width: 90%;
+    height: 90vh;
+    width: 90%;
+    overflow: scroll;
 }
 
 table, a {
@@ -25,7 +26,6 @@ table, a {
 }
 
 .b-new.mat-button {
-    margin-bottom: 2%;
     padding: 5px 20px;
     border-radius: 5px;
     color: #23b6ca;
